k8s/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky  
  namespace: tasky
  labels:
    app.kubernetes.io/name: tasky
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: tasky
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tasky
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: tasky
          image: ghcr.io/bmoussaud/tasky:main
          imagePullPolicy: Always
          ports:
            - name: app-port
              containerPort: 8080
          resources:
            requests:
              cpu: 0.125
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: tasky  
  namespace: tasky
  labels:
    app.kubernetes.io/name: tasky
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tasky
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
